--- a/Home.html
+++ b/Home.html
@@ -14,11 +14,11 @@
             <!-- <img class="logo_img" src="../assets/logo 1.png" alt=""> -->
             <div class="nav_bar">
                 <img class="logo_img" src="../assets/logo 1.png" alt="">
-                <a href="">Home</a>
-                <a href="">Shop</a>
-                <a href="">My <br>Account </a>
-                <a href="">Compare</a>
-                <a href="">Login</a>
+                <a href="./Home.html">Home</a>
+                <a href="./shop.html">Shop</a>
+                <a href="./Myaccount.html">My <br>Account </a>
+                <a href="./Compar.html">Compare</a>
+                <a href="./Login.html">Login</a>
                 <div class="input_bar">
                    <input type="text" placeholder="Search for items...">
                     <i class="fa-solid fa-magnifying-glass"></i>
@@ -798,23 +798,7 @@
       
 
     </div>
-    <!-- Hot relases &trendly ends  -->
-  <!-- footer_main starts -->
-  <!-- <div class="container-fluid">
-    <div class="footer_main">
-      <div class="sign">
-        <img style="background-color: teal;" src="../assets/icon_email.png" alt="" width="25px">
-        <span>Sign into Newsletter </span>
-      </div>
-      <div class="coupon">
-        <p>...and receive $25 coupon for first shopping</p>
-      </div>
-      <div class="email_input">
-        <input type="text" placeholder="Enter Your Email">
-        <button class="email_button">Subscribe</button>
-      </div>
-    </div>
-  </div> -->
+   
 
   <div class="footerHeader">
   <h2>
@@ -829,7 +813,7 @@
 </div>
 <div class="footer " >
   <div  class="ftimg">
-    <img class="ftimg1" src="../assets/logo 1.png" alt=" logoAIt" width="170px" height="49px"  style="margin-bottom: 10px; background-color: ;">
+    <img class="ftimg1" src="../assets/logo 1.png" alt=" logoAIt" width="170px" height="49px"  style="margin-bottom: 10px; ">
     <p style="opacity: .5; font-size: 16px;">Contact</p>
       <p><strong style="color: rgb(80, 77, 77);" >Address:</strong > <span style="opacity: .5;"> 13 Tlemcen Road, Street 32, Beb-Wahren</span> </p>
       <p><strong style="color: rgb(80, 77, 77);" >Phone:</strong >  <span style="opacity: .5;"> +01 2222 365 /(+91) 01 2345 6789</span></p>
