--- a/Compar.html
+++ b/Compar.html
@@ -7,6 +7,76 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
+    <style>
+            /* table {
+      width: 100%;
+
+      border-collapse: collapse;
+    }
+
+    th {
+      color: gray;
+      border: 1px solid rgb(230, 230, 230);
+      padding: 10px;
+      text-align: center;
+      font-size: 14px;
+    }
+    td {
+      border: 1px solid rgb(230, 230, 230);
+      padding: 10px;
+      text-align: center;
+      font-size: 14px;
+      opacity: 0.8;
+    }
+
+    th img {
+      width: 310px;
+      height: 310px;
+    } */
+
+    /* Product Name */
+    /* .productName {
+      font-weight: bold;
+      color: rgb(0, 105, 92);
+      font-weight: bold;
+    }
+
+    .colorOptions .color {
+      display: inline-block;
+      gap: 10px;
+    }
+    .color {
+      width: 18px;
+      height: 18px;
+      border-radius: 50%;
+    }
+
+    .red {
+      background-color: red;
+    }
+    .yellow {
+      background-color: yellow;
+    }
+    .orange {
+      background-color: orange;
+    } */
+
+    /* Out of Stock */
+    /* .outStock {
+      color: rgb(0, 150, 136);
+    } */
+
+    /* Add to Cart Button */
+    /* .cartBtn {
+      background-color: rgb(0, 105, 92);
+      color: white;
+      border: none;
+      padding: 10px 15px;
+      font-size: 16px;
+      border-radius: 5px;
+      cursor: pointer;
+    } */
+    </style>
 </head>
 <body>
     <header class="">
@@ -39,8 +109,96 @@
      <div class="shop_index">Home <span style="padding: 1px 5px 1px 5px;">></span><span style="padding-left: 3px;">Shop</span>
                  <span style="padding: 1px 5px 1px 5px;">></span><span style="padding-left: 3px;">Compare</span>
     </div>
-     <!-- home compare ends -->
+     <!-- home  compare ends -->
       <br>
+
+      <!-- table starts -->
+     <div class="container">
+        <table>
+            <thead>
+                <tr>
+                    <th>Image</th>
+                    <th><img src="./assets/product-2-1.jpg" alt="" width="300px"></th>
+                    <th><img src="./assets/product-4-1.jpg" alt="" width="300px"></th>
+                    <th><img src="./assets/product-7-1.jpg" alt="" width="300px"></th>
+                </tr>
+                <tr>
+                    <th>Name</th>
+                    <th>Plain Striola Shrits</th>
+                    <th>Chen Cardigan</th>
+                    <th>Henley Shirt</th>
+                </tr>
+
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Price</td>
+                    <td>$35</td>
+                    <td>$67</td>
+                    <td>$24</td>
+                </tr>
+                <tr>
+                    <td>Description</td>
+                    <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque, obcaecati illo cumque laudantium iure quisquam .</td>
+                    <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque, obcaecati illo cumque laudantium iure quisquam .</td>
+                    <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque, obcaecati illo cumque laudantium iure quisquam .</td>
+                </tr>
+                <tr>
+                    <td>Colors</td>
+                    <td>
+                        <div class="colrs orange"></div>
+                        <div class="colrs red"></div>
+                        <div class="colrs yellow"></div>
+                    </td>
+                    <td>
+                        <div class="colrs orange"></div>
+                        <div class="colrs red"></div>
+                        <div class="colrs yellow"></div>
+                    </td>
+                    <td>
+                        <div class="colrs orange"></div>
+                        <div class="colrs red"></div>
+                        <div class="colrs yellow"></div>
+                    </td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+
+            </tbody>
+        </table>
+     </div>
+
+    
+
+      <!-- table ends -->
 
       <!-- footer starts -->
            <div class="footerHeader">
