--- a/Compar.html
+++ b/Compar.html
@@ -115,84 +115,95 @@
       <!-- table starts -->
      <div class="container">
         <table>
-            <thead>
-                <tr>
-                    <th>Image</th>
-                    <th><img src="./assets/product-2-1.jpg" alt="" width="300px"></th>
-                    <th><img src="./assets/product-4-1.jpg" alt="" width="300px"></th>
-                    <th><img src="./assets/product-7-1.jpg" alt="" width="300px"></th>
-                </tr>
-                <tr>
-                    <th>Name</th>
-                    <th>Plain Striola Shrits</th>
-                    <th>Chen Cardigan</th>
-                    <th>Henley Shirt</th>
-                </tr>
-
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Price</td>
-                    <td>$35</td>
-                    <td>$67</td>
-                    <td>$24</td>
-                </tr>
-                <tr>
-                    <td>Description</td>
-                    <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque, obcaecati illo cumque laudantium iure quisquam .</td>
-                    <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque, obcaecati illo cumque laudantium iure quisquam .</td>
-                    <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque, obcaecati illo cumque laudantium iure quisquam .</td>
-                </tr>
-                <tr>
-                    <td>Colors</td>
-                    <td>
-                        <div class="colrs orange"></div>
-                        <div class="colrs red"></div>
-                        <div class="colrs yellow"></div>
-                    </td>
-                    <td>
-                        <div class="colrs orange"></div>
-                        <div class="colrs red"></div>
-                        <div class="colrs yellow"></div>
-                    </td>
-                    <td>
-                        <div class="colrs orange"></div>
-                        <div class="colrs red"></div>
-                        <div class="colrs yellow"></div>
-                    </td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-
-            </tbody>
+            
+            <tr>
+                <th>Image</th>
+                <th><img src="./assets/product-2-1.jpg" alt="" width="300px"></th>
+                <th><img src="./assets/product-4-1.jpg" alt="" width="300px"></th>
+                <th><img src="./assets/product-7-1.jpg" alt="" width="300px"></th>
+            </tr>
+            <tr>
+              <th>Name</th>
+              <td class="productName">Plain Striola Shirts</td>
+              <td class="productName">Chen Cardigan</td>
+              <td class="productName">Henley Shirt</td>
+            </tr>
+            <tr>
+              <th>Price</th>
+              <td>$35</td>
+              <td>$67</td>
+              <td>$24</td>
+            </tr>
+            <tr>
+              <th>Description</th>
+              <td>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
+                perferendis nam, fuga reiciendis libero doloremque distinctio.
+              </td>
+              <td>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
+                perferendis nam, fuga reiciendis libero doloremque distinctio.
+              </td>
+              <td>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
+                perferendis nam, fuga reiciendis libero doloremque distinctio.
+              </td>
+            </tr>
+            <tr class="c1">
+              <th>Colors</th>
+              <td class="colorOptions">
+                <span class="color orange"></span>
+                <span class="color red"></span>            
+                <span class="color yellow"></span>
+              </td>
+              <td class="colorOptions">
+                <span class="color orange"></span>
+                <span class="color red"></span>            
+                <span class="color yellow"></span>
+              </td>
+              <td class="colorOptions">
+                <span class="color orange"></span>
+                <span class="color red"></span>            
+                <span class="color yellow"></span>
+              </td>
+            </tr>
+            <tr>
+              <th>Stock</th>
+              <td class="outStock">Out of stock</td>
+              <td class="outStock">Out of stock</td>
+              <td class="outStock">Out of stock</td>
+            </tr>
+            <tr>
+              <th>Weight</th>
+              <td>150 gram</td>
+              <td>150 gram</td>
+              <td>150 gram</td>
+            </tr>
+            <tr>
+              <th>Dimensions</th>
+              <td>N/A</td>
+              <td>N/A</td>
+              <td>N/A</td>
+            </tr>
+            <tr>
+              <th class="Buy">Buy</th>
+              <td><button class="cartBtn">Add to Cart</button></td>
+              <td><button class="cartBtn">Add to Cart</button></td>
+              <td><button class="cartBtn">Add to Cart</button></td>
+            </tr>
+            <tr>
+              <th>Remove</th>
+              <td>
+                <img src="./Assets/Pictures/Delete.png"width="15px" height="15px"/>
+              </td>
+              <td>
+                <img src="./Assets/Pictures/Delete.png"width="15px" height="15px"/>
+                
+              </td>
+              <td>
+                <img src="./Assets/Pictures/Delete.png"width="15px" height="15px"/>
+              </td>
+            </tr>
         </table>
      </div>
 
