--- a/Compar.html
+++ b/Compar.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
     <style>
-            /* table {
+            table {
       width: 100%;
 
       border-collapse: collapse;
@@ -75,7 +75,7 @@
       font-size: 16px;
       border-radius: 5px;
       cursor: pointer;
-    } */
+    }
     </style>
 </head>
 <body>
