--- a/Compar.html
+++ b/Compar.html
@@ -35,7 +35,7 @@
     } */
 
     /* Product Name */
-    /* .productName {
+    .productName {
       font-weight: bold;
       color: rgb(0, 105, 92);
       font-weight: bold;
@@ -59,15 +59,15 @@
     }
     .orange {
       background-color: orange;
-    } */
+    }
 
     /* Out of Stock */
-    /* .outStock {
+    .outStock {
       color: rgb(0, 150, 136);
-    } */
+    }
 
     /* Add to Cart Button */
-    /* .cartBtn {
+    .cartBtn {
       background-color: rgb(0, 105, 92);
       color: white;
       border: none;
@@ -194,14 +194,13 @@
             <tr>
               <th>Remove</th>
               <td>
-                <img src="./Assets/Pictures/Delete.png"width="15px" height="15px"/>
+                <img src="./assets/Delete.png"width="15px" height="15px"/>
               </td>
               <td>
-                <img src="./Assets/Pictures/Delete.png"width="15px" height="15px"/>
-                
+                <img src="./assets/Delete.png"width="15px" height="15px"/>
               </td>
               <td>
-                <img src="./Assets/Pictures/Delete.png"width="15px" height="15px"/>
+                <img src="./assets/Delete.png"width="15px" height="15px"/>
               </td>
             </tr>
         </table>
@@ -223,7 +222,7 @@
       <button>Subscribe</button>
   </div>
 </div>
-<div class="footer " >
+<div class="footer container" >
   <div  class="ftimg">
     <img class="ftimg1" src="../assets/logo 1.png" alt=" logoAIt" width="170px" height="49px"  style="margin-bottom: 10px; ">
     <p style="opacity: .5; font-size: 16px;">Contact</p>
