--- a/Home.html
+++ b/Home.html
@@ -43,6 +43,7 @@
             <h2 class="pro_h2">Fashion Trending</h2>
             <h1 class="pro_h1">Great Collection</h1>
             <p class="pro_1">Save more with coupons & upto 20% off </p>
+            <button class="pro_but">Shop Now</button>
         </div>
         <div class="promotion_img">
             <img src="../assets/home-img .png" alt="" height="400px" width="600px">
@@ -810,7 +811,7 @@
       <button>Subscribe</button>
   </div>
 </div>
-<div class="footer " >
+<div class="footer container" >
   <div  class="ftimg">
     <img class="ftimg1" src="../assets/logo 1.png" alt=" logoAIt" width="170px" height="49px"  style="margin-bottom: 10px; ">
     <p style="opacity: .5; font-size: 16px;">Contact</p>
