--- a/Login.html
+++ b/Login.html
@@ -91,7 +91,7 @@
       <button>Subscribe</button>
   </div>
 </div>
-<div class="footer " >
+<div class="footer container" >
   <div  class="ftimg">
     <img class="ftimg1" src="../assets/logo 1.png" alt=" logoAIt" width="170px" height="49px"  style="margin-bottom: 10px; ">
     <p style="opacity: .5; font-size: 16px;">Contact</p>
