--- a/shop.html
+++ b/shop.html
@@ -37,7 +37,7 @@
     </header>
 
     <!-- home shop starts -->
-     <div class="shop_index">Home <span style="padding: 1px 5px 1px 5px;">></span><span style="padding-left: 3px;">Shop</span></div>
+     <div class="shop_index">Home <span style="padding: 1px 5px 1px 5px;">></span><span style="padding-left: 3px; width: 100%;">Shop</span></div>
      <!-- home shop ends -->
       <br>
       <div class="container">
@@ -521,7 +521,7 @@
       <button>Subscribe</button>
   </div>
 </div>
-<div class="footer " >
+<div class="footer container " >
   <div  class="ftimg">
     <img class="ftimg1" src="../assets/logo 1.png" alt=" logoAIt" width="170px" height="49px"  style="margin-bottom: 10px; ">
     <p style="opacity: .5; font-size: 16px;">Contact</p>
@@ -564,7 +564,7 @@
   </div>
 </div>
 <div class="footer-bottom" style="display: flex; justify-content: space-between;">
-  <span> ©2025 SRINATH. All rights reserved </span>   <span>Designer by SRINATH.A </span> 
+  <span> ©2025 SRINATH. All rights reserved </span><span>Designer by SRINATH.A </span> 
 </div>
 
 </body>
