--- a/Home.html
+++ b/Home.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./mediaqueries.css">
 </head>
 <body>
     <header class="">
@@ -19,7 +20,7 @@
                 <a href="./Compar.html">Compare</a>
                 <a href="./Login.html">Login</a>
                 <div class="input_bar">
-                   <input type="text" placeholder="Search for items...">
+                   <input class="Home_inp" type="text" placeholder="Search for items...">
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
                 
@@ -46,7 +47,7 @@
             <button class="pro_but">Shop Now</button>
         </div>
         <div class="promotion_img">
-            <img src="../assets/home-img .png" alt="" height="400px" width="600px">
+            <img class="pro-img" src="../assets/home-img .png" alt="" height="400px" width="600px">
         </div>
     </div>
     <!-- hot promotin ends -->
