--- a/Compar.html
+++ b/Compar.html
@@ -222,50 +222,59 @@
       <button>Subscribe</button>
   </div>
 </div>
-<div class="footer container" >
-  <div  class="ftimg">
-    <img class="ftimg1" src="../assets/logo 1.png" alt=" logoAIt" width="170px" height="49px"  style="margin-bottom: 10px; ">
-    <p style="opacity: .5; font-size: 16px;">Contact</p>
-      <p><strong style="color: rgb(80, 77, 77);" >Address:</strong > <span style="opacity: .5;"> 13 Tlemcen Road, Street 32, Beb-Wahren</span> </p>
-      <p><strong style="color: rgb(80, 77, 77);" >Phone:</strong >  <span style="opacity: .5;"> +01 2222 365 /(+91) 01 2345 6789</span></p>
-      <p><strong style="color: rgb(80, 77, 77);"  >Hours:</strong > <span style="opacity: .5;">10:00 - 18:00, Mon - Sat</span></p><br><br>
-      <p style="opacity: 0.5;">Follow Me</p>
-      <div class="social-icons" style="opacity: .7;">
-          <img src="../assets/icon_facebook.png" alt="Facebook">
-          <img src="../assets/icon_twitter.png" alt="Twitter">
-          <img src="../assets/icon_instagram.png" alt="Instagram">
-          <img src="../assets/icon_pinerst.png" alt="printer">
-          <img src="../assets/icon_youtube.png" alt="printer">
-
-      </div>
-  </div>
-  <div class="footerAddress" >
-      <h3>Address</h3>
-      <a href="#">About Us</a>
-      <a href="#">Delivery Information</a>
-      <a href="#">Privacy Policy</a>
-      <a href="#">Terms & Conditions</a>
-      <a href="#">Contact Us</a>
-      <a href="#">Support Center</a>
-  </div>
-  <div class="footerAddress">
-      <h3>My Account</h3>
-      <a href="#">Sign In</a>
-      <a href="#">View Cart</a>
-      <a href="#">My Wishlist</a>
-      <a href="#">Track My Order</a>
-      <a href="#">Help</a>
-      <a href="#">Order</a>
-  </div>
-  <div class="footerGateways">
-      <h3>Secured Payed Gateways</h3>
-      
-          <img src="../assets/visa.png" alt="Visa" >
-     
-  </div>
+<div class="footerHeader">
+    <h2>
+        <img class="header_img" src="../assets/icon-email.svg" alt="email">
+        Sign in to Newsletter
+    </h2>
+    <p>...and receive $25 coupon for first shopping.</p>
+    <div class="footerbtn">
+        <input type="email" placeholder="Enter Your Email" class="footer_inp">
+        <button>Subscribe</button>
+    </div>
 </div>
-<div class="footer-bottom" style="display: flex; justify-content: space-between;">
-  <span> ©2025 SRINATH. All rights reserved </span>   <span>Designer by SRINATH.A </span> 
+<div class="footer container">
+    <div class="ftimg">
+        <img class="ftimg1" src="../assets/logo 1.png" alt="logoAIt">
+        <p class="footer_text1">Contact</p>
+        <p class="footer_text1"><strong>Address:</strong> <span>13 Tlemcen Road, Street 32, Beb-Wahren</span></p>
+        <p class="footer_text1"><strong>Phone:</strong> <span>+01 2222 365 /(+91) 01 2345 6789</span></p>
+        <p class="footer_text1"><strong>Hours:</strong> <span>10:00 - 18:00, Mon - Sat</span></p>
+        <br><br>
+        <p class="footer_text1">Follow Me</p>
+        <div class="social-icons">
+            <img src="../assets/icon_facebook.png" alt="Facebook">
+            <img src="../assets/icon_twitter.png" alt="Twitter">
+            <img src="../assets/icon_instagram.png" alt="Instagram">
+            <img src="../assets/icon_pinerst.png" alt="Pinterest">
+            <img src="../assets/icon_youtube.png" alt="YouTube">
+        </div>
+    </div>
+    <div class="footerAddress">
+        <h3>Address</h3>
+        <a href="#">Delivery Information</a>
+        <a href="#">Privacy Policy</a>
+        <a href="#">Terms & Conditions</a>
+        <a href="#">Contact Us</a>
+        <a href="#">Support Center</a>
+    </div>
+    <div class="footerAddress">
+        <h3>My Account</h3>
+        <a href="#">Sign In</a>
+        <a href="#">View Cart</a>
+        <a href="#">My Wishlist</a>
+        <a href="#">Track My Order</a>
+        <a href="#">Help</a>
+        <a href="#">Order</a>
+    </div>
+    <div class="footerGateways">
+        <h3>Secured Payment Gateways</h3>
+        <img class="visa" src="../assets/visa.png" alt="Visa">
+    </div>
+</div>
+<div class="footer-bottom">
+    <span>©2025 SRINATH. All rights reserved</span>
+    <span>Designed by SRINATH.A</span>
 </div>
 </body>
 </html>
