--- a/Compar.html
+++ b/Compar.html
@@ -6,77 +6,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+      <!-- <link rel="stylesheet" href="./mediaqueries.css"> -->
     <link rel="stylesheet" href="./style.css">
-    <style>
-            table {
-      width: 100%;
-
-      border-collapse: collapse;
-    }
-
-    th {
-      color: gray;
-      border: 1px solid rgb(230, 230, 230);
-      padding: 10px;
-      text-align: center;
-      font-size: 14px;
-    }
-    td {
-      border: 1px solid rgb(230, 230, 230);
-      padding: 10px;
-      text-align: center;
-      font-size: 14px;
-      opacity: 0.8;
-    }
-
-    th img {
-      width: 310px;
-      height: 310px;
-    } */
-
-    /* Product Name */
-    .productName {
-      font-weight: bold;
-      color: rgb(0, 105, 92);
-      font-weight: bold;
-    }
-
-    .colorOptions .color {
-      display: inline-block;
-      gap: 10px;
-    }
-    .color {
-      width: 18px;
-      height: 18px;
-      border-radius: 50%;
-    }
-
-    .red {
-      background-color: red;
-    }
-    .yellow {
-      background-color: yellow;
-    }
-    .orange {
-      background-color: orange;
-    }
-
-    /* Out of Stock */
-    .outStock {
-      color: rgb(0, 150, 136);
-    }
-
-    /* Add to Cart Button */
-    .cartBtn {
-      background-color: rgb(0, 105, 92);
-      color: white;
-      border: none;
-      padding: 10px 15px;
-      font-size: 16px;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    </style>
 </head>
 <body>
     <header class="">
@@ -211,17 +142,7 @@
       <!-- table ends -->
 
       <!-- footer starts -->
-           <div class="footerHeader">
-  <h2>
-      <img src="../assets/icon-email.svg" alt="email" width="40px" height="40px" style="position: relative; bottom: 3px;" >
-      Sign in to Newsletter
-  </h2>
-  <p>...and receive $25 coupon for first shopping.</p>
-  <div class="footerbtn">
-      <input type="email" placeholder="Enter Your Email">
-      <button>Subscribe</button>
-  </div>
-</div>
+
 <div class="footerHeader">
     <h2>
         <img class="header_img" src="../assets/icon-email.svg" alt="email">
