--- a/Myaccount.html
+++ b/Myaccount.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+      <!-- <link rel="stylesheet" href="./mediaqueries.css"> -->
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -70,17 +71,7 @@
 
      <!-- account_for bar -->
       <!-- footer starts -->
-           <div class="footerHeader">
-  <h2>
-      <img src="../assets/icon-email.svg" alt="email" width="40px" height="40px" style="position: relative; bottom: 3px;" >
-      Sign in to Newsletter
-  </h2>
-  <p>...and receive $25 coupon for first shopping.</p>
-  <div class="footerbtn">
-      <input type="email" placeholder="Enter Your Email">
-      <button>Subscribe</button>
-  </div>
-</div>
+
 <div class="footerHeader">
     <h2>
         <img class="header_img" src="../assets/icon-email.svg" alt="email">
