--- a/shop.html
+++ b/shop.html
@@ -10,6 +10,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+      <!-- <link rel="stylesheet" href="./mediaqueries.css"> -->
   <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -517,18 +518,7 @@
   </div>
   <!-- shop_pages ends -->
   <!-- footer starts -->
-  <div class="footerHeader">
-    <h2>
-      <img src="../assets/icon-email.svg" alt="email" width="40px" height="40px"
-        style="position: relative; bottom: 3px;">
-      Sign in to Newsletter
-    </h2>
-    <p>...and receive $25 coupon for first shopping.</p>
-    <div class="footerbtn">
-      <input type="email" placeholder="Enter Your Email">
-      <button>Subscribe</button>
-    </div>
-  </div>
+
   <div class="footerHeader">
     <h2>
       <img class="header_img" src="../assets/icon-email.svg" alt="email">
